--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 
 p {
     color: rgb(0,0,0);
-    font-family: 'Adobe Caslon Pro';
+    font-family: 'Glacial Indifference';
     font-size: 9pt;
     margin-top: 0.3em
 }
